tests/rosetta/out/Haskell/abundant-deficient-and-perfect-number-classifications.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abundant-deficient-and-perfect-number-classifications.hs:113:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abundant-deficient-and-perfect-number-classifications.hs:108:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abundant-deficient-and-perfect-number-classifications.hs:113:1
    |
113 | main = do
    | ^^^^
